mdapioutput/objects/PDF_FieldTransformation__mdt.object
<CustomObject>
    <description>Used to transform field in PDF template before generating DVP</description>
    <fields>
        <fullName>BarcodeType__c</fullName>
        <label>Barcode Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code39</fullName>
                    <default>true</default>
                    <label>Code39</label>
                </value>
                <value>
                    <fullName>Code39Mod43</fullName>
                </value>
                <value>
                    <fullName>EAN-13</fullName>
                </value>
                <value>
                    <fullName>EAN-8</fullName>
                </value>
                <value>
                    <fullName>Code93</fullName>
                </value>
                <value>
                    <fullName>Code128</fullName>
                </value>
                <value>
                    <fullName>PDF417</fullName>
                </value>
                <value>
                    <fullName>QRCode</fullName>
                </value>
                <value>
                    <fullName>Aztec</fullName>
                </value>
                <value>
                    <fullName>Interleaved2of5</fullName>
                </value>
                <value>
                    <fullName>ITF14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransformationType__c</fullName>
        <label>Transformation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barcode</fullName>
                    <default>true</default>
                    <label>Barcode</label>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PDF Field Transformation</label>
    <pluralLabel>PDF Field Transformations</pluralLabel>
</CustomObject>